<resources>
    <string name="app_name">Hunter Portaria</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="scan">Scan</string>
    <string name="completed_appointments">Completed Appointments</string>
    <string name="today_s_appointments">Today\'s Appointments</string>
    <string name="appointment_owner">Appointment Owner:</string>
    <string name="supplier_name">Supplier name:</string>
    <string name="driver_name">Driver name:</string>
    <string name="gate_no">Gate no.:</string>
    <string name="total_items">Total Items:</string>
    <string name="view_all">View all</string>
    <string name="warehouse">Warehouse:</string>
    <string name="dock">Dock:</string>
    <string name="status_completed">Status: Completed</string>
    <string name="status_pending">Status: Initiated</string>
    <string name="some_error_occurred">Some error occurred</string>
    <string name="retry">Retry</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="order_rejected">Order Rejected</string>
    <string name="order_completed">Order Completed</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="scheduled">Scheduled</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="truck_entered">Truck Entered</string>
    <string name="completed">Completed</string>
    <string name="initiated">Initiated</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="items_in_the_order">Items in the order</string>
    <string name="qr_code_info_msg">Ask the driver to scan the above code to login via their app</string>
    <string name="scan_info">Place the scanner appropriately on the barcode to obtain the details of the appointment</string>
    <string name="qr_code">QR Code</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="allow_cam_permission">Please allow camera permission to scan</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accept_driver_alert_msg">Clicking yes will accept the driver and the order</string>
    <string name="reject_driver_alert_msg">Clicking yes will reject the driver and the order</string>
    <string name="gate_keeper_at">Gate Keeper @</string>
    <string name="logout_alert_title">Logout?</string>
    <string name="logout_alert_msg">Are you sure you want to logout?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="view_ticket">View Ticket</string>
    <string name="driver_not_assigned">Driver not assigned</string>
    <string name="supplier">Supplier:</string>
    <string name="driver">Driver:</string>
    <string name="owner">Owner:</string>
    <string name="appointment_status">Appointment Status:</string>
    <string name="user_name_empty_message">Username cannot be empty</string>
    <string name="password_empty_message">Password cannot be empty</string>
    <string name="truck_name">Truck Name</string>
    <string name="add_truck">Add Truck</string>
    <string name="please_wait">Please wait…</string>
    <string name="truck_license">Truck License</string>
    <string name="no_truck_found">No truck found in this appointment. Please add a truck to accept.</string>
    <string name="vehicle_added_to_appointment">Vehicle successfully added to appointment.</string>
    <string name="search_query_hint">Type truck name or license number…</string>
    <string name="loading">Loading…</string>
    <string name="create_truck">Create Truck</string>
    <string name="no_driver_found">No driver found in this appointment. Please add a driver...</string>
</resources>