<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.add_truck.AddTruckActivity">

    <EditText
        android:id="@+id/add_truck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:padding="14dp"
        android:hint="@string/truck_name"
        android:inputType="textCapWords"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:inputType="textCapCharacters"
        android:id="@+id/add_truck_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:padding="14dp"
        android:hint="@string/truck_license"
        android:background="@drawable/edit_text_bg"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/add_truck_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_truck_license"
        app:layout_constraintBottom_toTopOf="@id/create_button"
        android:id="@+id/form_list_lin"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:id="@+id/loader_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ProgressBar
            android:id="@+id/loader_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/loader_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:layout_margin="12dp"
            android:text="@string/please_wait"
            android:textSize="16sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_truck"
        android:paddingStart="22dp"
        android:fontFamily="@font/poppins"
        android:paddingEnd="22dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_margin="22dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/create_button"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>