<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".pages.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/ic_hunter_logo"
            tools:ignore="ContentDescription"/>

        <EditText
            android:id="@+id/login_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:padding="14dp"
            android:layout_marginTop="56dp"
            android:layout_marginHorizontal="18dp"
            android:drawablePadding="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableStart="@drawable/user"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="#C6C6C6"
            android:background="@drawable/edit_text_bg"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            android:layout_marginHorizontal="18dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/poppins"
                android:padding="14dp"
                android:background="@drawable/edit_text_bg"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/password_vector"
                android:inputType="textPassword"
                android:importantForAutofill="no" />


        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <ProgressBar
                android:visibility="gone"
                android:id="@+id/login_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="48dp"
                android:text="@string/login"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>