<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/order_completed"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical"
            android:text="@string/status_completed"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="12sp"
                android:text="Lucid Air"/>

            <TextView
                android:id="@+id/tv_product_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="12sp"
                android:text="F3000"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/warehouse"/>

            <TextView
                android:id="@+id/tv_warehouse_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="Schenker India"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:layout_marginStart="12dp"
                android:textStyle="bold"
                android:textSize="10sp"
                android:text="@string/dock"/>

            <TextView
                android:id="@+id/tv_dock_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="Cochin Shipyard"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>