<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:id="@+id/bg_appointment_status"
                android:layout_height="46dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_appointment_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:paddingHorizontal="16dp"
                    android:gravity="center_vertical"
                    android:text="Status: Completed"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:id="@+id/bg_gate"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_gate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:paddingHorizontal="16dp"
                    android:gravity="center_vertical|end"
                    android:text="Gate no: "/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingHorizontal="12dp"
            android:gravity="center"
            android:weightSum="2.3"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/supplier"/>

                <TextView
                    android:id="@+id/tv_supplier_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:text="Schenker India"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">


            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/driver"/>

                <TextView
                    android:id="@+id/tv_driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:text="Cochin Shipyard"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:paddingVertical="4dp"
            android:baselineAligned="false">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:gravity="center|end"
                android:textStyle="bold"
                android:textSize="12sp"
                android:text="@string/owner"/>

            <TextView
                android:id="@+id/tv_owner_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"
                android:gravity="center|start"
                android:textStyle="bold"
                android:textColor="#000"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>